# claude-agent-sdk-playwright-actor

./: .gitignore  README.md  example-prompt.md  pyproject.toml
.actor/: .gitignore  Dockerfile  actor.json  input_schema.json
example/: 7TWm6CMNKSGRILfsL_workspace_output.html  94Rio2TAHJuyKhYt4_workspace_output.html  brand-guideline.md  result_1.json
src/actor_brand_guideline_creator/: __init__.py  __main__.py
src/actor_claude_sdk_playwright/: __init__.py  __main__.py
